# AmateLight

./: .gitignore  AmateLight.slnx  GIMP-Turboプロジェクト概要.docx  GIMP-Turbo開発手順.docx  GIMP-Turbo開発計画.docx  README.md  ~$MP-Turbo開発計画.docx  画面モック.pptx
Amatelight/: AUDIT.cs  Amatelight.csproj  DataModel.cs  OSSTATE.cs  OUTPUT.cs  Program.cs
Amatelight/Properties/: launchSettings.json
GIMP-Turbo/: GIMP-Turbo.sln  opencv.txt
GIMP-Turbo/GIMP-Turbo/: GIMP-Turbo.pyproj
GIMP-Turbo/Step1/: main.cpp  test_opencv  test_opencv.cpp
GIMP-Turbo/Step1/GIMP_Turbo/GIMP_Turbo/: test.cpp
Step1/: image_processor  image_processor.cpp  test  test.cpp  test_opencv  test_opencv.cpp
Step2/: CMakeLists.txt  image_processor.bat  image_processor.ps1  main.cpp  mingw_toolchain.cmake
Step2/gui/: auto_adjust.py
Step2/src/: analyze_main.cpp  analyzer.cpp  analyzer.hpp  auto_adjust.cpp  auto_adjust.hpp  denoise.cpp
